--- a/_sass/_notices.scss
+++ b/_sass/_notices.scss
@@ -41,6 +41,30 @@ $global-transition: all 0.2s ease-in-out;
   }
 }
 
+:root.theme-light {
+  --primary-color: #2D3748;
+  --secondary-color: #EDF2F7;
+  --accent-color: #4C51BF;
+  --text-color: #2D3748;
+  --default-notice-color: #E2E8F0;
+  --info-color: #3182CE;
+  --warning-color: #DD6B20;
+  --success-color: #38A169;
+  --danger-color: #E53E3E;
+}
+
+:root.theme-dark {
+  --primary-color: #E2E8F0;
+  --secondary-color: #2D3748;
+  --accent-color: #7F9CF5;
+  --text-color: #E2E8F0;
+  --default-notice-color: #4A5568;
+  --info-color: #90CDF4;
+  --warning-color: #F6AD55;
+  --success-color: #68D391;
+  --danger-color: #FC8181;
+}
+
 @mixin notice($notice-color) {
   margin: $base-spacing * 2 0;
   padding: $base-spacing;
