--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -174,42 +174,83 @@
 
 .greedy-nav {
   position: relative;
-  min-width: 250px;
-  background: $background-color;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  min-width: 0;
+  min-height: 3rem;
+  padding: 0 0.75rem;
+  background: var(--menu-background-color);
+  border: 1px solid var(--menu-border-color);
+  border-radius: $base-border-radius;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+  -webkit-transition: background-color $global-transition, border-color $global-transition, box-shadow $global-transition;
+          transition: background-color $global-transition, border-color $global-transition, box-shadow $global-transition;
 
   a {
     display: block;
     margin: 0 1rem;
-    padding: 0.5rem 0;
-    color: $masthead-link-color;
+    padding: 0.75rem 0;
+    color: var(--primary-color);
     text-decoration: none;
+    font-weight: 500;
+    -webkit-transition: color $global-transition;
+            transition: color $global-transition;
 
-    &:hover {
-      color: $masthead-link-color-hover;
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+
+    &:focus {
+      outline: none;
+      text-decoration: underline;
+      text-decoration-thickness: 2px;
+      text-underline-offset: 6px;
     }
   }
 
   button {
-    position: absolute;
-    height: 100%;
-    right: 0;
-    padding: 0 0.5rem;
-    border: 0;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    padding: 0.35rem 0.75rem;
+    border: 1px solid transparent;
+    border-radius: $base-border-radius;
     outline: none;
-    background-color: $primary-color;
+    background-color: var(--accent-color);
     color: #fff;
     cursor: pointer;
+    -webkit-transition: background-color $global-transition, color $global-transition, border-color $global-transition, box-shadow $global-transition;
+            transition: background-color $global-transition, color $global-transition, border-color $global-transition, box-shadow $global-transition;
+
+    &:hover,
+    &:focus {
+      background-color: var(--primary-color);
+      color: var(--background-color);
+      border-color: transparent;
+      box-shadow: 0 0 0 3px rgba(127, 156, 245, 0.35);
+    }
   }
 
   .visible-links {
-    display: table;
+    display: flex;
+    align-items: center;
+    flex: 1 1 auto;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    min-width: 0;
 
     li {
-      display: table-cell;
-      vertical-align: middle;
+      display: flex;
+      align-items: center;
 
       &:first-child {
-        font-weight: bold;
+        font-weight: 700;
 
         a {
           margin-left: 0;
@@ -232,16 +273,20 @@
         left: 0;
         bottom: 0;
         height: 4px;
-        background: mix(#fff, $primary-color, 50%);
+        background: var(--accent-color);
         width: 100%;
-        -webkit-transition: $global-transition;
-        transition: $global-transition;
+        border-radius: 999px;
+        -webkit-transition: -webkit-transform $global-transition;
+        transition: -webkit-transform $global-transition;
+        transition: transform $global-transition;
+        transition: transform $global-transition, -webkit-transform $global-transition;
         -webkit-transform: scaleX(0);
             -ms-transform: scaleX(0);
                 transform: scaleX(0); /* hide*/
       }
 
-      &:hover:before {
+      &:hover:before,
+      &:focus:before {
         -webkit-transform: scaleX(1);
             -ms-transform: scaleX(1);
                 transform: scaleX(1); /* reveal*/
@@ -251,23 +296,32 @@
 
   .hidden-links {
     position: absolute;
-    top: 100%;
+    top: calc(100% + 0.5rem);
     right: 0;
-    margin-top: 15px;
-    padding: 5px;
-    border: 1px solid $border-color;
+    margin: 0;
+    padding: 0.75rem;
+    border: 1px solid var(--menu-border-color);
     border-radius: $border-radius;
-    background: #fff;
-    box-shadow: 0 0 10px rgba(#000, 0.25);
+    background: var(--menu-background-color);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+    list-style: none;
+
+    &.active {
+      display: block !important;
+      visibility: visible !important;
+    }
 
     a {
       margin: 0;
-      padding: 10px 20px;
+      padding: 0.5rem 1.25rem;
       font-size: $type-size-5;
+      color: var(--primary-color);
+      -webkit-transition: background-color $global-transition, color $global-transition;
+              transition: background-color $global-transition, color $global-transition;
 
       &:hover {
-        color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
+        color: var(--accent-color);
+        background: rgba(127, 156, 245, 0.12);
       }
     }
 
@@ -279,7 +333,7 @@
       width: 0;
       border-style: solid;
       border-width: 0 10px 10px;
-      border-color: $border-color transparent;
+      border-color: var(--menu-border-color) transparent;
       display: block;
       z-index: 0;
     }
@@ -292,7 +346,7 @@
       width: 0;
       border-style: solid;
       border-width: 0 10px 10px;
-      border-color: #fff transparent;
+      border-color: var(--menu-background-color) transparent;
       display: block;
       z-index: 1;
     }
